# bbr

./: .gitignore  AUDIT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  USAGE.md  install.sh
.cargo/: audit.toml
.commandcode/taste/: taste.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: output-schema.md
src/: auth.rs  cli.rs  config.rs  dispatch.rs  error.rs  git.rs  lib.rs  main.rs  stack.rs
src/api/: deploy.rs  issue.rs  mod.rs  pipeline.rs  pr.rs  repo.rs  source.rs  status.rs  webhook.rs
src/commands/: api.rs  audit.rs  auth.rs  batch.rs  ci.rs  ci_compare.rs  ci_schedules.rs  ci_vars.rs  commit.rs  completion.rs  config.rs  dashboard.rs  deploy.rs  deploy_keys.rs  export.rs  issue.rs  mod.rs  open.rs  pr.rs  repo.rs  schema.rs  search.rs  src_cmd.rs  stack.rs  status.rs  update.rs  webhook.rs  workspace.rs
src/diff/: align.rs  mod.rs  parser.rs  pathspec.rs  renderer.rs  syntax.rs  word_diff.rs
src/output/: json.rs  mod.rs  table.rs  theme.rs
tests/: api_ci_schedules.rs  api_deploy_keys.rs  api_new_features.rs  api_pipeline.rs  api_pr.rs  api_repo.rs  api_retry.rs  api_reviewers_merge_check.rs  api_status.rs  api_variables.rs  cli_smoke.rs
