[package]
name = "bbr"
version = "0.1.0"
edition = "2021"
description = "BitBucket Remote — a fast, single-binary Bitbucket Cloud CLI for coding agents and humans"
license = "MIT"
keywords = ["bitbucket", "cli", "atlassian", "devops", "pull-request"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://github.com/sdadev/bbr#readme"
repository = "https://github.com/sdadev/bbr"
homepage = "https://github.com/sdadev/bbr"
readme = "README.md"
rust-version = "1.74"
exclude = [
    ".github/**",
    "tests/**",
    "completions/**",
    "docs/**",
    "*.sh",
]

[[bin]]
name = "bb"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "=4.5.6", features = ["derive", "env", "wrap_help"] }
clap_complete = "=4.5.4"

# HTTP / async
reqwest = { version = "=0.12.4", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-util", "fs", "signal"] }
futures-util = "0.3"

# Serde / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Pretty output
comfy-table = "=7.1.4"
indicatif = "0.17"
colored = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config / dirs / misc
dirs = "5"
url = "2"
xdg = "2"
rpassword = "7"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dist]
inherits = "release"
