[package]
name = "bbr"
version = "0.1.8"
edition = "2021"
description = "BitBucket Remote — a fast, single-binary Bitbucket Cloud CLI for coding agents and humans"
license = "MIT"
keywords = ["bitbucket", "cli", "atlassian", "devops", "pull-request"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://github.com/themankindproject/bbr#readme"
repository = "https://github.com/themankindproject/bbr"
homepage = "https://github.com/themankindproject/bbr"
readme = "README.md"
rust-version = "1.88"
exclude = [
    ".github/**",
    "tests/**",
    "completions/**",
    "docs/**",
    "*.sh",
]

[[bin]]
name = "bbr"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "=4.5.6", features = ["derive", "env", "wrap_help"] }
clap_complete = "=4.5.4"

# HTTP / async
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "http2"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

# Serde / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors / logging
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Pretty output
comfy-table = { version = "=7.1.4", features = ["custom_styling"] }
indicatif = "0.17"
colored = "2"

# Config / dirs / misc
dirs = "5"
xdg = "2"
rpassword = "=7.3.1"

# Credential safety (zeroize on drop)
secrecy = "0.10"

# Date/time parsing (ISO 8601, relative time)
time = { version = "0.3", features = ["parsing", "formatting"] }

# Diff rendering
similar = "2"
unicode-width = "0.1"

# Self-update
flate2 = "1"
tar = "0.4"
sha2 = "0.10"

# Safe atomic temp files for self-update
tempfile = "3"

# Base64 encoding (HTTP Basic auth)
base64 = "0.22"

# Timed wait for child processes (git)
wait-timeout = "0.2"

[target.'cfg(unix)'.dependencies]
# Terminal width detection (ioctl TIOCGWINSZ on Unix)
libc = "0.2"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dist]
inherits = "release"
